# installer

./: .gitignore  debug.py  entry.py  pyproject.toml  requirements.txt  setup.cfg
installer/: main.py
installer/functions/: __init__.py  constants.py
installer/install/: install_steps.py  welcome.py  widgets_load.py
installer/install/common/: context.py  event.py  install_config.py  step_widget.py
installer/install/package_manager/: __init__.py
installer/install/widgets/: 10_install_system_dependencies.py
